// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShoppingBag Notification Components:  ActionWrapper  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  margin: 0.625rem auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0rem 0rem;
  padding: 1rem 1rem;
  border-top: .0625rem solid #9e9e9e;
}

.c0.c0 > div,
.c0.c0 > a {
  width: 18rem;
  height: 2.25rem;
  margin: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

@media (max-width:767px) {
  .c0.c0 > div,
  .c0.c0 > a {
    width: 16rem;
  }
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`ShoppingBag Notification Components:  Container  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #f7f7f7;
  border-radius: 0.25rem;
  width: 20rem;
}

@media (max-width:767px) {
  .c0 {
    width: 18rem;
  }
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`ShoppingBag Notification Components:  Container  should match the snapshot with default white background when theme doesn't have a popover background 1`] = `
<DocumentFragment>
  .c0 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: white;
  border-radius: 0.25rem;
  width: 20rem;
}

@media (max-width:767px) {
  .c0 {
    width: 18rem;
  }
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`ShoppingBag Notification Components:  NotificationMessage  should match the snapshot  1`] = `
<DocumentFragment>
  .c0.c0 {
  padding: 0.8125rem 1.1875rem 0.75rem 1rem;
  width: 16rem;
}

@media (max-width:767px) {
  .c0.c0 {
    width: 15rem;
  }
}

<p
    class="MuiTypography-root c0 MuiTypography-body1"
  />
</DocumentFragment>
`;
